add the projects page

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,5 +7,8 @@
         <div style="width:10% float:left">
             <p><a href="/about">about</a></p>
         </div>
+        <div style="width:10% float:left">
+            <p><a href="/project">project</a></p>
+        </div>
     </div>
 </header>
