--- a/views/project.hbs
+++ b/views/project.hbs
@@ -6,7 +6,7 @@
     </head>
     <body>
         {{> header}}
-        <p>Some text here</p>
+        <p>Projects Info here</p>
 
         {{> footer}}
     </body>
